# wiki2

./: Cargo.toml  readme.md
src/: bin.rs  default.hbs  lib.rs
tests/test1/: _index.md  hi.md
tests/test1/sub-folder/: _index.md  inner-hi.md
